// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders properly with customSizeClassName provided 1`] = `
<div
  className="text-center "
>
  <div
    className="spinner-border testclassname"
    role="status"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`<Spinner /> renders properly with default props 1`] = `
<div
  className="text-center "
>
  <div
    className="spinner-border "
    role="status"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`<Spinner /> renders properly with marginBootstrapClassName provided 1`] = `
<div
  className="text-center mt-1"
>
  <div
    className="spinner-border "
    role="status"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;
